2020-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/sizeof-1.pk: New test.
	* testsuite/poke.pkl/sizeof-2.pk: Likewise.
	* testsuite/poke.pkl/sizeof-3.pk: Likewise.
	* testsuite/poke.pkl/sizeof-12.pk: Likewise.
	* testsuite/poke.pkl/sizeof-11.pk: Likewise.
	* testsuite/poke.pkl/sizeof-10.pk: Likewise.
	* testsuite/poke.pkl/sizeof-9.pk: Likewise.
	* testsuite/poke.pkl/sizeof-8.pk: Likewise.
	* testsuite/poke.pkl/sizeof-7.pk: Likewise.
	* testsuite/poke.pkl/sizeof-6.pk: Likewise.
	* testsuite/poke.pkl/sizeof-5.pk: Likewise.
	* testsuite/poke.pkl/sizeof-4.pk: Likewise.

2020-02-16  John Darrington <john@darrington.wattle.id.au>

	* src/pk-repl.c (poke_getc): Revert to poke_completion_function
	if no complete command is on the repl's command line.

2020-02-16  John Darrington <john@darrington.wattle.id.au>

	* src/pk-editor.c (null_complete_function): delete
	* src/pk-repl.c (null_complete_function): add (move from above)
	* src/pk-repl.c (poke_getc): Use null_complete_function as the
	default completer.

2020-02-16  John Darrington <john@darrington.wattle.id.au>

	* src/pk-def.c: Explicitly set completer member of struct pk_cmd
	typed variables to NULL.
        * src/pk-help.c: ditto
        * src/pk-ios.c:  ditto
        * src/pk-misc.c: ditto
        * src/pk-set.c:  ditto
        * src/pk-vm.c:   ditto

2020-02-19  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_try_until_stmt): Emit sync instruction
	before jumping back.

2020-02-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-promo.c (pkl_promo_ps_op_mul): Support multiplication of
	an integer by string.
	* src/pkl-typify.c (pkl_typify1_ps_mul): Likewise.
	* src/pkl-gen.c (pkl_gen_ps_op_mul): Likewise.
	* src/pkl-fold.c (OP_BINARY_SIS): Define.
	(EMUL_SIS): Likewise.
	(pkl_fold_mul): Use OP_BINARY_SIS.
	* src/pkl-insn.def (PKL_INSN_MULS): Define.
	* src/pvm.jitter (muls): New instruction.
	* testsuite/poke.pkl/mul-strings-1.pk: New test.